--- a/index.html
+++ b/index.html
@@ -10,67 +10,88 @@
 </head>
 
 <body>
-  <!-- Header, where name and info go? -->
+  <!-- Header, where name and navbar go -->
   <header>
     <h1>Here's the portfolio, bon apettite</h1>
-    <p>
-      please hire me
-    </p>
-  </header>
-
-  <!-- Navbar, links to different sections -->
+    
   <nav>
     <a href="#">About Me</a>
     <a href="#">Portfolio</a>
     <a href="#">Contact Me</a>
   </nav>
 
+  </header>
+
   <br>
 
   <!-- Body -->
   <main>
     <!-- About Me -->
-    <div class="About Me">
-        <header>About Me</header>
-        <p>Relevant things about me, no clue what they are yet</p>
+    <div class="aboutme">
+        <header class="title">About Me</header>
+        <p class="content">Relevant things about me, no clue what they are yet</p>
     </div>
 
     <br>
 
     <!-- Portfolio -->
     <div class="portfolio">
-      <section class="project">
-        <header>Project 1</header>
-        <img src="relevant screenshot" alt="Project 1" />
-        <p>Project 1 info</p>
-        <a href="link to deployed website">Project 1</a>
-      </section>
-      <section class="project">
-        <header>Project 2</header>
-        <img src="relevant screenshot" alt="Project 2" />
-        <p>Project 2 info</p>
-        <a href="link to deployed website">Project 2</a>
-      </section>
-      <section class="project">
-        <header>Project 3</header>
-        <img src="relevant screenshot" alt="Project 3" />
-        <p>Project 3 info</p>
-        <a href="link to deployed website">Project 3</a>
-      </section>
-      <section class="project">
-        <header>Project 4</header>
-        <img src="relevant screenshot" alt="Project 4" />
-        <p>Project 4 info</p>
-        <a href="link to deployed website">Project 4</a>
-      </section>
+        <header class="title">Portfolio</header>
+        <div class="content">
+            <section class="project">
+                <header>Project 1</header>
+                <img src="relevant screenshot" alt="Project 1" />
+                <p>Project 1 info</p>
+                <a href="link to deployed website">Project 1</a>
+            </section>
+            <section class="project">
+                <header>Project 2</header>
+                <img src="relevant screenshot" alt="Project 2" />
+                <p>Project 2 info</p>
+                <a href="link to deployed website">Project 2</a>
+            </section>
+            <section class="project">
+                <header>Project 3</header>
+                <img src="relevant screenshot" alt="Project 3" />
+                <p>Project 3 info</p>
+                <a href="link to deployed website">Project 3</a>
+            </section>
+            <section class="project">
+                <header>Project 4</header>
+                <img src="relevant screenshot" alt="Project 4" />
+                <p>Project 4 info</p>
+                <a href="link to deployed website">Project 4</a>
+            </section>
+        </div>
     </div>
 
     <br>
 
     <!-- Contact Me -->
-    <div class="Contact Me">
-        <header>Contact Me</header>
-        <p>My contact information, probably phone and email, maybe linkedin?</p>
+    <div class="contactme">
+        <header class="title">Contact Me</header>
+        <div class="content"> 
+            <section class="project">
+                <p>
+                    Phone Number
+                </p>
+            </section>   
+            <section class="project">
+                <p>
+                    Email Address
+                </p>
+            </section>
+            <section class="project">
+                <p>
+                    GitHub Link
+                </p>
+            </section>
+            <section class="project">
+                <p>
+                    Linkedin
+                </p>
+            </section>
+        </div>
     </div>
   </main>
 
@@ -78,9 +99,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>
-      footer things, is this necessary? or is this where the contact info goes?
-    </p>
+    <p>I don't think I actually need this</p>
   </footer>
 </body>
 
