--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <header>
     <h1>Here's the portfolio, bon apettite</h1>
     
-  <nav>
-    <a href="#">About Me</a>
-    <a href="#">Portfolio</a>
-    <a href="#">Contact Me</a>
-  </nav>
+    <nav>
+        <a href="#aboutme">About Me</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contactme">Contact Me</a>
+    </nav>
 
   </header>
 
@@ -27,40 +27,51 @@
   <!-- Body -->
   <main>
     <!-- About Me -->
-    <div class="aboutme">
+    <div class="aboutme" id="aboutme">
         <header class="title">About Me</header>
-        <p class="content">Relevant things about me, no clue what they are yet</p>
+        <p class="aboutme-content">Relevant things about me, no clue what they are yet</p>
     </div>
 
     <br>
 
     <!-- Portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <header class="title">Portfolio</header>
-        <div class="content">
-            <section class="project">
-                <header>Project 1</header>
+        <div class="portfolio-content">
+            <section class="project-card">
                 <img src="relevant screenshot" alt="Project 1" />
                 <p>Project 1 info</p>
-                <a href="link to deployed website">Project 1</a>
+                <header>
+                    <a href="link to deployed website">Project 1</a>
+                </header>
             </section>
-            <section class="project">
-                <header>Project 2</header>
+            <section class="project-card">
                 <img src="relevant screenshot" alt="Project 2" />
                 <p>Project 2 info</p>
-                <a href="link to deployed website">Project 2</a>
+                <header>
+                    <a href="link to deployed website">Project 2</a>
+                </header> 
             </section>
-            <section class="project">
-                <header>Project 3</header>
+            <section class="project-card">
                 <img src="relevant screenshot" alt="Project 3" />
                 <p>Project 3 info</p>
-                <a href="link to deployed website">Project 3</a>
+                <header>
+                    <a href="link to deployed website">Project 3</a>
+                </header>
             </section>
-            <section class="project">
-                <header>Project 4</header>
+            <section class="project-card">
                 <img src="relevant screenshot" alt="Project 4" />
                 <p>Project 4 info</p>
-                <a href="link to deployed website">Project 4</a>
+                <header>
+                    <a href="link to deployed website">Project 4</a> 
+                </header>
+            </section>
+            <section class="project-card">
+                <img src="relevant screenshot" alt="Project 5" />
+                <p>Project 5 info</p>
+                <header>
+                    <a href="link to deployed website">Project 5</a> 
+                </header>
             </section>
         </div>
     </div>
@@ -68,25 +79,25 @@
     <br>
 
     <!-- Contact Me -->
-    <div class="contactme">
+    <div class="contactme" id="contactme">
         <header class="title">Contact Me</header>
-        <div class="content"> 
-            <section class="project">
+        <div class="contactme-content"> 
+            <section class="contact-card">
                 <p>
                     Phone Number
                 </p>
             </section>   
-            <section class="project">
+            <section class="contact-card">
                 <p>
                     Email Address
                 </p>
             </section>
-            <section class="project">
+            <section class="contact-card">
                 <p>
                     GitHub Link
                 </p>
             </section>
-            <section class="project">
+            <section class="contact-card">
                 <p>
                     Linkedin
                 </p>
