added portfolio images

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     </nav>
 
   </header>
+  <!-- Image Banner -->
+  <div>
+    <img src="background image" alt="Background image of a ?">
+    <p>I don't have programming projects to display yet, so here is some of my art</p>
+  </div>
 
   <br>
 
