git is asking me to do a commit before I try to pull from the main branch again??

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Header, where name and info go? -->
   <header>
-    <h1>Here's the portfolio, bon apettite</h1>
+    <h1>Quincy Maynor</h1>
     <p>
       please hire me
     </p>
