--- a/index.html
+++ b/index.html
@@ -12,20 +12,14 @@
 <body>
   <!-- Header, where name and navbar go -->
   <header>
-    <h1>Here's the portfolio, bon apettite</h1>
-    
+    <h1>Quincy Maynor</h1>
+    <p>I do not have a coding portfolio yet, so here is a small collection of my art instead.</p>
     <nav>
         <a href="#aboutme">About Me</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contactme">Contact Me</a>
     </nav>
-
   </header>
-  <!-- Image Banner -->
-  <div>
-    <img src="background image" alt="Background image of a ?">
-    <p>I don't have programming projects to display yet, so here is some of my art</p>
-  </div>
 
   <br>
 
@@ -44,38 +38,43 @@
         <header class="title">Portfolio</header>
         <div class="portfolio-content">
             <section class="project-card">
-                <img src="relevant screenshot" alt="Project 1" />
-                <p>Project 1 info</p>
+                <img src="./assets/images/StudyinBlue.png" alt="Abstract curving and swelling pieces of copper with many speckled blue hues pieced together on a white background"/>
                 <header>
-                    <a href="link to deployed website">Project 1</a>
+                    <h2>Study in Blue</h2>
+                    <p>2021, Enameled Copper, 8.5" x 8.5"</p>
+                    <!-- for future programming projects <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
             <section class="project-card">
-                <img src="relevant screenshot" alt="Project 2" />
-                <p>Project 2 info</p>
+                <img src="./assets/images/Conformity(square).png" alt="Realistic porcelain wall-mounted sculpture of a face with a deep gash extending from the corner of their mouth to the hinge of their jaw"/>
                 <header>
-                    <a href="link to deployed website">Project 2</a>
-                </header> 
+                  <h2>Conformity</h2>
+                  <p>2020, Porcelain, 9.5" x 4.75" x 3.5"</p>
+                  <!-- <a href="link to deployed website">Website Name</a> -->
+              </header> 
             </section>
             <section class="project-card">
-                <img src="relevant screenshot" alt="Project 3" />
-                <p>Project 3 info</p>
+                <img src="./assets/images/Proxy(square).png" alt="A pair of bronze walnuts"/>
                 <header>
-                    <a href="link to deployed website">Project 3</a>
+                  <h2>Proxy</h2>
+                  <p>2020, Bronze, 1.5" x 1.25" each</p>
+                  <!-- <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
             <section class="project-card">
-                <img src="relevant screenshot" alt="Project 4" />
-                <p>Project 4 info</p>
+                <img src="./assets/images/SelfPortrait2019(square).png" alt="A photograph of two people, one person holding the hair of the other up to their face as if trying on a beard"/>
                 <header>
-                    <a href="link to deployed website">Project 4</a> 
+                  <h2>Self Portrait (2019)</h2>
+                  <p>2019, Archival Inkjet Print, 25" x 17"</p>
+                  <!-- <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
             <section class="project-card">
-                <img src="relevant screenshot" alt="Project 5" />
-                <p>Project 5 info</p>
+                <img src="./assets/images/TheRealityofPicasso(square).png" alt="A picture of a person lying down with only their covered face in focus"/>
                 <header>
-                    <a href="link to deployed website">Project 5</a> 
+                  <h2>The Reality of Picasso</h2>
+                  <p>2021, Gelatin Silver Print, 8" x 10"</p>
+                  <!-- <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
         </div>
