fine tuned header styles and added background images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Header, where name and navbar go -->
-  <header>
+  <header class="siteheader">
     <h1>Quincy Maynor</h1>
     <p>I do not have a coding portfolio yet, so here is a small collection of my art instead.</p>
     <nav>
@@ -27,7 +27,7 @@
   <main>
     <!-- About Me -->
     <div class="aboutme" id="aboutme">
-        <header class="title">About Me</header>
+        <header class="title1">About Me</header>
         <p class="aboutme-content">Relevant things about me, no clue what they are yet</p>
     </div>
 
@@ -35,7 +35,7 @@
 
     <!-- Portfolio -->
     <div class="portfolio" id="portfolio">
-        <header class="title">Portfolio</header>
+        <header class="title2">Portfolio</header>
         <div class="portfolio-content">
             <section class="project-card">
                 <img src="./assets/images/StudyinBlue.png" alt="Abstract curving and swelling pieces of copper with many speckled blue hues pieced together on a white background"/>
@@ -84,7 +84,7 @@
 
     <!-- Contact Me -->
     <div class="contactme" id="contactme">
-        <header class="title">Contact Me</header>
+        <header class="title3">Contact Me</header>
         <div class="contactme-content"> 
             <section class="contact-card">
                 <p>
