finalized all the styling details, added a google font, and organized the css sheet

--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Jura?category=Sans+Serif">
+  <style>
+    body {
+      font-family: "Jura", sans-serif;
+    }
+  </style>
 </head>
 
 <body>
   <!-- Header, where name and navbar go -->
   <header class="siteheader">
     <h1>Quincy Maynor</h1>
-    <p>I do not have a coding portfolio yet, so here is a small collection of my art instead.</p>
+    <p>I do not have a coding portfolio yet, so here is some art for now.</p>
     <nav>
         <a href="#aboutme">About Me</a>
         <a href="#portfolio">Portfolio</a>
@@ -27,36 +33,49 @@
   <main>
     <!-- About Me -->
     <div class="aboutme" id="aboutme">
-        <header class="title1">About Me</header>
-        <p class="aboutme-content">Relevant things about me, no clue what they are yet</p>
+        <h2 class="title1">About Me</h2>
+        <div class="aboutme-content">
+          <p>I'm an artist learning how to code, it's pretty neat to be able to combine the two here!</p>
+          <br>
+          <br>
+          <p>Here are just a few small pieces I've made the past couple years. My art largely focuses on processing the connection between comfort and discomfort, significance and insignificance, and our identities and possessions through a queer and autistic lens. My most recent piece is actually what I have used clips of for the headers.</p>
+        </div>
     </div>
 
     <br>
 
     <!-- Portfolio -->
     <div class="portfolio" id="portfolio">
-        <header class="title2">Portfolio</header>
+        <h2 class="title2">Portfolio</h2>
         <div class="portfolio-content">
             <section class="project-card">
                 <img src="./assets/images/StudyinBlue.png" alt="Abstract curving and swelling pieces of copper with many speckled blue hues pieced together on a white background"/>
                 <header>
-                    <h2>Study in Blue</h2>
+                    <h3>Study in Blue</h3>
                     <p>2021, Enameled Copper, 8.5" x 8.5"</p>
                     <!-- for future programming projects <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
             <section class="project-card">
+              <img src="./assets/images/TheRealityofPicasso(square).png" alt="A picture of a person lying down with only their covered face in focus"/>
+              <header>
+                <h3>The Reality of Picasso</h3>
+                <p>2021, Gelatin Silver Print, 8" x 10"</p>
+                <!-- <a href="link to deployed website">Website Name</a> -->
+              </header>
+          </section>
+            <section class="project-card">
                 <img src="./assets/images/Conformity(square).png" alt="Realistic porcelain wall-mounted sculpture of a face with a deep gash extending from the corner of their mouth to the hinge of their jaw"/>
                 <header>
-                  <h2>Conformity</h2>
+                  <h3>Conformity</h3>
                   <p>2020, Porcelain, 9.5" x 4.75" x 3.5"</p>
                   <!-- <a href="link to deployed website">Website Name</a> -->
-              </header> 
+                </header> 
             </section>
             <section class="project-card">
                 <img src="./assets/images/Proxy(square).png" alt="A pair of bronze walnuts"/>
                 <header>
-                  <h2>Proxy</h2>
+                  <h3>Proxy</h3>
                   <p>2020, Bronze, 1.5" x 1.25" each</p>
                   <!-- <a href="link to deployed website">Website Name</a> -->
                 </header>
@@ -64,16 +83,8 @@
             <section class="project-card">
                 <img src="./assets/images/SelfPortrait2019(square).png" alt="A photograph of two people, one person holding the hair of the other up to their face as if trying on a beard"/>
                 <header>
-                  <h2>Self Portrait (2019)</h2>
+                  <h3>Self Portrait (2019)</h3>
                   <p>2019, Archival Inkjet Print, 25" x 17"</p>
-                  <!-- <a href="link to deployed website">Website Name</a> -->
-                </header>
-            </section>
-            <section class="project-card">
-                <img src="./assets/images/TheRealityofPicasso(square).png" alt="A picture of a person lying down with only their covered face in focus"/>
-                <header>
-                  <h2>The Reality of Picasso</h2>
-                  <p>2021, Gelatin Silver Print, 8" x 10"</p>
                   <!-- <a href="link to deployed website">Website Name</a> -->
                 </header>
             </section>
@@ -84,28 +95,20 @@
 
     <!-- Contact Me -->
     <div class="contactme" id="contactme">
-        <header class="title3">Contact Me</header>
+        <h2 class="title3">Contact Me</h2>
         <div class="contactme-content"> 
             <section class="contact-card">
-                <p>
-                    Phone Number
-                </p>
+              <p>Phone: (612) 442 3948</p>
             </section>   
             <section class="contact-card">
-                <p>
-                    Email Address
-                </p>
+                <p>Email: quincymaynor@gmail.com</p>
+            </section>
+            <!--<section class="contact-card">
+                <p>GitHub Link</p>
             </section>
             <section class="contact-card">
-                <p>
-                    GitHub Link
-                </p>
-            </section>
-            <section class="contact-card">
-                <p>
-                    Linkedin
-                </p>
-            </section>
+                <p>Linkedin</p>
+            </section>-->
         </div>
     </div>
   </main>
@@ -114,7 +117,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>I don't think I actually need this</p>
+    <p>Go make some art too, it's good for you!</p>
   </footer>
 </body>
 
