--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
     <div class="aboutme" id="aboutme">
         <h2 class="title1">About Me</h2>
         <div class="aboutme-content">
-          <p>I'm an artist learning how to code, it's pretty neat to be able to combine the two here!</p>
-          <br>
-          <br>
-          <p>Here are just a few small pieces I've made the past couple years. My art largely focuses on processing the connection between comfort and discomfort, significance and insignificance, and our identities and possessions through a queer and autistic lens. My most recent piece is actually what I have used clips of for the headers.</p>
+          <p>I am new to coding and excited to bring my commitment to inclusivity, accessibility, and passion for nerd things to my work!</p>
         </div>
     </div>
 
@@ -48,46 +45,46 @@
     <div class="portfolio" id="portfolio">
         <h2 class="title2">Portfolio</h2>
         <div class="portfolio-content">
-            <section class="project-card">
-                <img src="./assets/images/StudyinBlue.png" alt="Abstract curving and swelling pieces of copper with many speckled blue hues pieced together on a white background"/>
-                <header>
-                    <h3>Study in Blue</h3>
-                    <p>2021, Enameled Copper, 8.5" x 8.5"</p>
-                    <!-- for future programming projects <a href="link to deployed website">Website Name</a> -->
-                </header>
-            </section>
-            <section class="project-card">
-              <img src="./assets/images/TheRealityofPicasso(square).png" alt="A picture of a person lying down with only their covered face in focus"/>
-              <header>
-                <h3>The Reality of Picasso</h3>
-                <p>2021, Gelatin Silver Print, 8" x 10"</p>
-                <!-- <a href="link to deployed website">Website Name</a> -->
-              </header>
+          <section class="project-card">
+            <img src="/assets/images/MinimumViablePlaylistScreenshot.png" alt="Screenshot of the minimum viable playlist homepage"/>
+            <header>
+                <h3>Minimum Viable Playlist</h3>
+                <p>A simple and sleek playlist creation app for music enthusiasts who want to create custim playlists</p>
+                <a href="https://bradylange1.github.io/Playlist-Creator/">Minimum Viable Playlist</a>
+            </header>
           </section>
-            <section class="project-card">
-                <img src="./assets/images/Conformity(square).png" alt="Realistic porcelain wall-mounted sculpture of a face with a deep gash extending from the corner of their mouth to the hinge of their jaw"/>
-                <header>
-                  <h3>Conformity</h3>
-                  <p>2020, Porcelain, 9.5" x 4.75" x 3.5"</p>
-                  <!-- <a href="link to deployed website">Website Name</a> -->
-                </header> 
-            </section>
-            <section class="project-card">
-                <img src="./assets/images/Proxy(square).png" alt="A pair of bronze walnuts"/>
-                <header>
-                  <h3>Proxy</h3>
-                  <p>2020, Bronze, 1.5" x 1.25" each</p>
-                  <!-- <a href="link to deployed website">Website Name</a> -->
-                </header>
-            </section>
-            <section class="project-card">
-                <img src="./assets/images/SelfPortrait2019(square).png" alt="A photograph of two people, one person holding the hair of the other up to their face as if trying on a beard"/>
-                <header>
-                  <h3>Self Portrait (2019)</h3>
-                  <p>2019, Archival Inkjet Print, 25" x 17"</p>
-                  <!-- <a href="link to deployed website">Website Name</a> -->
-                </header>
-            </section>
+          <section class="project-card">
+            <img src="./assets/images/TabletopCharacterCreatorScreenshot.png" alt="Screenshot of the tabletop character creator homepage"/>
+            <header>
+              <h3>Tabletop Character Creator</h3>
+              <p>An app for ch0aracter creation. The place to keep all your character ideas and brainstorm new ones.</p>
+              <a href="https://tabletop-character-creator-d355a7356b6d.herokuapp.com/">Tabletop Character Creator</a>
+            </header>
+          </section>
+          <!-- <section class="project-card">
+            <img src="" alt=""/>
+            <header>
+              <h3></h3>
+              <p></p>
+              <a href="link to deployed website">Website Name</a>
+            </header> 
+          </section> -->
+          <!-- <section class="project-card">
+            <img src="" alt=""/>
+            <header>
+              <h3></h3>
+              <p></p>
+              <a href="link to deployed website">Website Name</a>
+            </header>
+          </section> -->
+          <!-- <section class="project-card">
+            <img src="" alt=""/>
+            <header>
+              <h3></h3>
+              <p></p>
+              <a href="link to deployed website">Website Name</a>
+            </header>
+          </section> -->
         </div>
     </div>
 
@@ -103,12 +100,12 @@
             <section class="contact-card">
                 <p>Email: quincymaynor@gmail.com</p>
             </section>
-            <!--<section class="contact-card">
+            <section class="contact-card">
                 <p>GitHub Link</p>
             </section>
-            <section class="contact-card">
+            <!-- <section class="contact-card">
                 <p>Linkedin</p>
-            </section>-->
+            </section> -->
         </div>
     </div>
   </main>
