minor style tweaks

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Header, where name and navbar go -->
   <header class="siteheader">
     <h1>Quincy Maynor</h1>
-    <p>I do not have a coding portfolio yet, so here is some art for now.</p>
+    <p>I'm just getting started</p>
     <nav>
         <a href="#aboutme">About Me</a>
         <a href="#portfolio">Portfolio</a>
@@ -46,11 +46,11 @@
         <h2 class="title2">Portfolio</h2>
         <div class="portfolio-content">
           <section class="project-card">
-            <img src="/assets/images/MinimumViablePlaylistScreenshot.png" alt="Screenshot of the minimum viable playlist homepage"/>
+            <img src="./assets/images/MinimumViablePlaylistScreenshot.png" alt="Screenshot of the minimum viable playlist homepage"/>
             <header>
                 <h3>Minimum Viable Playlist</h3>
                 <p>A simple and sleek playlist creation app for music enthusiasts who want to create custim playlists</p>
-                <a href="https://bradylange1.github.io/Playlist-Creator/">Minimum Viable Playlist</a>
+                <a href="https://bradylange1.github.io/Playlist-Creator/">Link to Minimum Viable Playlist</a>
             </header>
           </section>
           <section class="project-card">
@@ -58,7 +58,7 @@
             <header>
               <h3>Tabletop Character Creator</h3>
               <p>An app for ch0aracter creation. The place to keep all your character ideas and brainstorm new ones.</p>
-              <a href="https://tabletop-character-creator-d355a7356b6d.herokuapp.com/">Tabletop Character Creator</a>
+              <a href="https://tabletop-character-creator-d355a7356b6d.herokuapp.com/">Link to Tabletop Character Creator</a>
             </header>
           </section>
           <!-- <section class="project-card">
